# aldrava

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: auto-release.yml  ci.yml
docs/: ARCHITECTURE.md  CATALOG.md  USAGE.md
specs/: example.lisp
src/: environment.rs  event.rs  interp.rs  lib.rs  main.rs  spec.rs  spec_lisp.rs
tests/: property_interp.rs  property_spec_lisp.rs
